--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,7 +25,9 @@ jobs:
         run: bazel build //src:helloworld_cli_deb --define VERSION=${{ github.run_number }}
 
       - name: Check
-        run: sudo apt-get install --yes --verbose ./bazel-bin/src/helloworld-0.0.${{ github.run_number }}-Linux.deb
+        run: |
+          dpkg -L ./bazel-bin/src/helloworld-0.0.${{ github.run_number }}-Linux.deb
+          sudo apt-get install --yes ./bazel-bin/src/helloworld-0.0.${{ github.run_number }}-Linux.deb
 
-      - name: Run
-        run: helloworld_cli
+      # - name: Run
+      #   run: dpkg -L
