--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,6 +24,13 @@ jobs:
       - name: Build
         run: bazel build //src:helloworld_cli_deb --define VERSION=${{ github.run_number }}
 
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        with:
+          files: |
+            bazel-bin/src/helloworld-0.0.${{ github.run_number }}-Linux.deb
+            bazel-bin/src/helloworld_cli
+
       - name: Check
         run: sudo apt-get install --yes ./bazel-bin/src/helloworld-0.0.${{ github.run_number }}-Linux.deb
 
