--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,8 +2,10 @@ name: 'C++ CI'
 
 on:
   push:
-    branches:
-      - main
+    # branches:
+    #   - main
+    tags:
+      - "v*.*.*"
 
 jobs:
   build:
@@ -31,8 +33,8 @@ jobs:
             bazel-bin/src/helloworld-0.0.${{ github.run_number }}-Linux.deb
             bazel-bin/src/helloworld_cli
 
-      - name: Check
-        run: sudo apt-get install --yes ./bazel-bin/src/helloworld-0.0.${{ github.run_number }}-Linux.deb
+      # - name: Check
+      #   run: sudo apt-get install --yes ./bazel-bin/src/helloworld-0.0.${{ github.run_number }}-Linux.deb
 
-      - name: Run
-        run: helloworld_cli
+      # - name: Run
+      #   run: helloworld_cli
