--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,10 +2,8 @@ name: 'C++ CI'
 
 on:
   push:
-    # branches:
-    #   - main
     tags:
-      - "v*.*.*"
+      - "v0.0.*"
 
 jobs:
   build:
@@ -22,6 +20,12 @@ jobs:
 
       - name: Checkout
         uses: actions/checkout@v3
+
+      - name: Compute Version
+        run: echo "VERSION=${GITHUB_REF_NAME}" >> "$GITHUB_ENV"
+
+      - name: Version
+        run: echo "${{ env.VERSION }}"
 
       - name: Build
         run: bazel build //src:helloworld_cli_deb --define VERSION=${{ github.run_number }}
