--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,20 +22,20 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Compute Version
-        run: echo "VERSION=${GITHUB_REF_NAME}" >> "$GITHUB_ENV"
+        run: echo "VERSION=${GITHUB_REF_NAME:5}" >> "$GITHUB_ENV"
 
       - name: Version
         run: echo "${{ env.VERSION }}"
 
-      - name: Build
-        run: bazel build //src:helloworld_cli_deb --define VERSION=${{ github.run_number }}
+      # - name: Build
+      #   run: bazel build //src:helloworld_cli_deb --define VERSION=${{ github.run_number }}
 
-      - name: Release
-        uses: softprops/action-gh-release@v1
-        with:
-          files: |
-            bazel-bin/src/helloworld-0.0.${{ github.run_number }}-Linux.deb
-            bazel-bin/src/helloworld_cli
+      # - name: Release
+      #   uses: softprops/action-gh-release@v1
+      #   with:
+      #     files: |
+      #       bazel-bin/src/helloworld-0.0.${{ github.run_number }}-Linux.deb
+      #       bazel-bin/src/helloworld_cli
 
       # - name: Check
       #   run: sudo apt-get install --yes ./bazel-bin/src/helloworld-0.0.${{ github.run_number }}-Linux.deb
