--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,18 +27,18 @@ jobs:
       - name: Version
         run: echo "${{ env.VERSION }}"
 
-      # - name: Build
-      #   run: bazel build //src:helloworld_cli_deb --define VERSION=${{ github.run_number }}
+      - name: Build
+        run: bazel build //src:helloworld_cli_deb --define VERSION=${{ env.VERSION }}
 
       # - name: Release
       #   uses: softprops/action-gh-release@v1
       #   with:
       #     files: |
-      #       bazel-bin/src/helloworld-0.0.${{ github.run_number }}-Linux.deb
+      #       bazel-bin/src/helloworld-0.0.${{ env.VERSION }}-Linux.deb
       #       bazel-bin/src/helloworld_cli
 
-      # - name: Check
-      #   run: sudo apt-get install --yes ./bazel-bin/src/helloworld-0.0.${{ github.run_number }}-Linux.deb
+      - name: Check
+        run: sudo apt-get install --yes ./bazel-bin/src/helloworld-0.0.${{ env.VERSION }}-Linux.deb
 
-      # - name: Run
-      #   run: helloworld_cli
+      - name: Run
+        run: helloworld_cli
